<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <include
        layout="@layout/item_feed_top_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_text_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/item_input_bg"
        android:gravity="top"
        android:hint="@string/input_url_hint"
        android:scrollbars="none"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/color_AAAAAA"
        app:hintTextColor="@color/color_FB7299" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/url_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/input_url_default"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/json_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/input_json_default"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/input_clear"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/play_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/input_jump"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>
</LinearLayout>